Move all URL refs to shareonbazaar.eu

--- a/config/message_email.html
+++ b/config/message_email.html
@@ -1,5 +1,5 @@
 <div style="padding:5px">
-    <img style="float:left; padding-right: 4px;" width=40 src="http://bazaar.intrst.de/favicon.png" />
+    <img style="float:left; padding-right: 4px;" width=40 src="http://shareonbazaar.eu/favicon.png" />
     <h3 style="padding-top: 8px;">Bazaar</h3>
     <div>
         <h4>Dear {recipient},</h4>
@@ -18,6 +18,6 @@
             {message}
         </blockquote>
 
-        <a href='http://bazaar.intrst.de/messages' style='padding:5px; background-color: #2469a0; color: white; font-weight: bold; border-radius: 3px; text-decoration: none;'>Send a reply</a>
+        <a href='http://shareonbazaar.eu/messages' style='padding:5px; background-color: #2469a0; color: white; font-weight: bold; border-radius: 3px; text-decoration: none;'>Send a reply</a>
     </div>
 </div>
